Общий шаблон для кабинета

--- a/src/AppBundle/Resources/views/Cabinet/password.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/password.html.twig
@@ -1,37 +1,22 @@
-{% extends 'AppBundle::_inside.html.twig' %}
+{% extends 'AppBundle:Cabinet:_cabinet_base.html.twig' %}
 
-{% block content %}
-
-    <div class="main-wrap__header">
-        <h1>{% trans %}change_password_header{% endtrans %}</h1>
-    </div>
-    <div class="wrap wrap_small">
-        <div class="wrap-right">
-            <ul class="wrap-list">
-                <li class="wrap-list__item"><a href="{{ path('cabinet') }}" class="wrap-list__link">{% trans %}profile{% endtrans %}</a></li>
-                <li class="wrap-list__item"><a href="{{ path('cabinet_password') }}" class="wrap-list__link">{% trans %}change_password{% endtrans %}</a></li>
-                <li class="wrap-list__item"><a href="{{ path('cabinet_social') }}" class="wrap-list__link">{% trans %}socials{% endtrans %}</a></li>
-            </ul>
-        </div>
-        <div class="wrap-left">
-            <div class="box-form settings">
-                <form class="js-settings-form" action="{{ path('cabinet_password_write') }}" method="POST">
-                    <div class="box-field col-3">
-                        <label class="box-field__label">{% trans %}new_password{% endtrans %} <span class="require-field-z">*</span></label>
-                        <div class="box-field__input">
-                            <input type="password" class="form-control js-require" name="password" value="" />
-                        </div>
-                    </div>
-                    <div class="box-field col-3">
-                        <label class="box-field__label">{% trans %}repeat_password{% endtrans %} <span class="require-field-z">*</span></label>
-                        <div class="box-field__input">
-                            <input type="password" class="form-control js-require" name="password_reply" value="" />
-                        </div>
-                    </div>
-                    <button type="submit" class="button button_warning" onclick="saveSettings();return false;">{% trans %}change{% endtrans %}</button>
-                    <span class="help-text inline settings__result js-settings-result"></span>
-                </form>
+{% block cabinetContent %}
+    <div class="box-form settings">
+        <form class="js-settings-form" action="{{ path('cabinet_password_write') }}" method="POST">
+            <div class="box-field col-3">
+                <label class="box-field__label">{% trans %}new_password{% endtrans %} <span class="require-field-z">*</span></label>
+                <div class="box-field__input">
+                    <input type="password" class="form-control js-require" name="password" value="" />
+                </div>
             </div>
-        </div>
+            <div class="box-field col-3">
+                <label class="box-field__label">{% trans %}repeat_password{% endtrans %} <span class="require-field-z">*</span></label>
+                <div class="box-field__input">
+                    <input type="password" class="form-control js-require" name="password_reply" value="" />
+                </div>
+            </div>
+            <button type="submit" class="button button_warning" onclick="saveSettings();return false;">{% trans %}change{% endtrans %}</button>
+            <span class="help-text inline settings__result js-settings-result"></span>
+        </form>
     </div>
 {% endblock %}
