--- a/src/AppBundle/Resources/views/Cabinet/social.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/social.html.twig
@@ -1,29 +1,14 @@
-{% extends 'AppBundle::_inside.html.twig' %}
+{% extends 'AppBundle:Cabinet:_cabinet_base.html.twig' %}
 
-{% block content %}
-
-    <div class="main-wrap__header">
-        <h1>{% trans %}socials_header{% endtrans %}</h1>
-    </div>
-    <div class="wrap wrap_small">
-        <div class="wrap-right">
-            <ul class="wrap-list">
-                <li class="wrap-list__item"><a href="{{ path('cabinet') }}" class="wrap-list__link">{% trans %}profile{% endtrans %}</a></li>
-                <li class="wrap-list__item"><a href="{{ path('cabinet_password') }}" class="wrap-list__link">{% trans %}change_password{% endtrans %}</a></li>
-                <li class="wrap-list__item"><a href="{{ path('cabinet_social') }}" class="wrap-list__link">{% trans %}socials{% endtrans %}</a></li>
+{% block cabinetContent %}
+    <div class="box-form settings">
+        <p>{% trans %}socials_left_text{% endtrans %}</p>
+        <div class="settings-social">
+            <ul class="social-wrap social-wrap__settings unstyled">
+                <li class="social-wrap__item active"> <a href="" class="social-wrap__link fb"><i class="fa fa-facebook"></i><i class="fa fa-check connect-icon"></i></a></li>
+                <li class="social-wrap__item"> <a href="" class="social-wrap__link vk"><i class="fa fa-vk"></i><i class="fa fa-check connect-icon"></i></a></li>
+                <li class="social-wrap__item"> <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i><i class="fa fa-check connect-icon"></i></a></li>
             </ul>
-        </div>
-        <div class="wrap-left">
-            <div class="box-form settings">
-                <p>{% trans %}socials_left_text{% endtrans %}</p>
-                <div class="settings-social">
-                    <ul class="social-wrap social-wrap__settings unstyled">
-                        <li class="social-wrap__item active"> <a href="" class="social-wrap__link fb"><i class="fa fa-facebook"></i><i class="fa fa-check connect-icon"></i></a></li>
-                        <li class="social-wrap__item"> <a href="" class="social-wrap__link vk"><i class="fa fa-vk"></i><i class="fa fa-check connect-icon"></i></a></li>
-                        <li class="social-wrap__item"> <a href="#" class="social-wrap__link gp"><i class="fa fa-google-plus"></i><i class="fa fa-check connect-icon"></i></a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 {% endblock %}
