--- a/src/AppBundle/Resources/views/Cabinet/password.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/password.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AppBundle:Cabinet:_cabinet_base.html.twig' %}
 
+{% block cabinetTitle %}{% trans %}change_password_header{% endtrans %}{% endblock %}
+
 {% block cabinetContent %}
     <div class="box-form settings">
         <form class="js-settings-form" action="{{ path('cabinet_password_write') }}" method="POST">
