--- a/src/AppBundle/Resources/views/Cabinet/social.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/social.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AppBundle:Cabinet:_cabinet_base.html.twig' %}
 
+{% block cabinetTitle %}{% trans %}socials_header{% endtrans %}{% endblock %}
+
 {% block cabinetContent %}
     <div class="box-form settings">
         <p>{% trans %}socials_left_text{% endtrans %}</p>
