--- a/src/AppBundle/Resources/views/Faq/index.html.twig
+++ b/src/AppBundle/Resources/views/Faq/index.html.twig
@@ -38,6 +38,8 @@
                     </div>
                     {% endfor %}
                 </div>
+                <br /><br />
+                <a href="{{ path('cabinet_tickets_add') }}" class="button button_warning">Создать обращение</a>
             </div>
         </div>
     </div>
