--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -1147,6 +1147,8 @@ table {
     border-top: 1px solid #e5e5e5; }
     table td.td-date, table th.td-date {
       width: 90px; }
+    table td.td-date-time, table th.td-date-time {
+      width: 140px; }
     table td.td-summa, table th.td-summa {
       width: 175px; }
   table tr:last-child td {
@@ -2266,6 +2268,8 @@ header {
     text-overflow: ellipsis;
     white-space: nowrap;
     border-bottom: 1px solid; }
+    .author a.long {
+      max-width: 100%; }
     .author a:hover {
       border-bottom-color: transparent; }
   .author .ic {
