Добавить 3D модель -> Загрузить 3D модель

--- a/src/AppBundle/Resources/views/Catalog/add.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/add.html.twig
@@ -118,7 +118,7 @@
                                 <a href="{{ path('page_7') }}" target="_blank" class="link">{% trans %}agent_agreement{% endtrans %}</a></label>
                         </div>
                     </div>
-                    <button type="submit" class="button button_warning js-add-model-btn" onclick="addModel();return false;">{% trans %}model_add{% endtrans %}</button>
+                    <button type="submit" class="button button_warning js-add-model-btn" onclick="addModel();return false;">{% trans %}model_add_btn{% endtrans %}</button>
                     <span class="help-text inline add-model__result js-add-model-result"></span>
                 </form>
             </div>
