--- a/src/AppBundle/Resources/views/Catalog/_product_comments.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/_product_comments.html.twig
@@ -4,7 +4,7 @@
         <div class="box-top">
             <div class="box-top__avatar">
                 <a href="{{ path('user_view',{nickname:e.user.nickname}) }}">
-                    <img src="{{ asset('bundles/app/img/article-avatar.png') }}" alt="">
+                    <img src="{% if e.user.image %}{% path e.user.image, 'small' %}{% else %}{{ asset('bundles/app/img/user.png') }}{% endif %}" alt="">
                 </a>
             </div>
             <div class="box-top__cont">
