--- a/src/AppBundle/Resources/views/Community/articles.html.twig
+++ b/src/AppBundle/Resources/views/Community/articles.html.twig
@@ -14,7 +14,7 @@
                 {% for e in entities %}
                     <article class="article">
                         <div class="box-top">
-                            <div class="box-top__avatar">{% if e.user %}<a href="{{ path('user_view',{nickname:e.user.nickname}) }}"><img src="{{ asset('bundles/app/img/article-avatar.png') }}" alt=""></a>{% endif %}</div>
+                            <div class="box-top__avatar">{% if e.user %}<a href="{{ path('user_view',{nickname:e.user.nickname}) }}"><img src="{% if e.user.image %}{% path e.user.image, 'small' %}{% else %}{{ asset('bundles/app/img/user.png') }}{% endif %}" alt=""></a>{% endif %}</div>
                             <div class="box-top__cont">
                                 {% if e.user %}<span class="author">{% trans %}product_from{% endtrans %}: <a href="{{ path('user_view',{nickname:e.user.nickname}) }}">{{ e.user.name }}</a><span class="ic icon-author-rating icon-author-rating__{{ e.user.lvl }}"></span></span>{% endif %}
                                 <h3 class="article__title"><a href="{{ path('articles_item',{id:e.id}) }}">{{ e.name }}</a></h3>
