--- a/src/AppBundle/Resources/views/Community/articlesView.html.twig
+++ b/src/AppBundle/Resources/views/Community/articlesView.html.twig
@@ -13,7 +13,7 @@
             <article class="article">
                 <div class="box-top">
                     <div class="box-top__avatar">{% if entity.user %}<a href="{{ path('user_view',{nickname:entity.user.nickname}) }}"><img
-                                    src="{{ asset('bundles/app/img/article-avatar.png') }}" alt=""></a>{% endif %}</div>
+                                    src="{% if entity.user.image %}{% path entity.user.image, 'small' %}{% else %}{{ asset('bundles/app/img/user.png') }}{% endif %}" alt=""></a>{% endif %}</div>
                     <div class="box-top__cont">
                         {% if entity.user %}<span class="author">{% trans %}product_from{% endtrans %}:<a
                                     href="{{ path('user_view',{nickname:entity.user.nickname}) }}">{{ entity.user.name }}</a><span
