Раздел Уведомления в ЛК

--- a/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/_cabinet_base.html.twig
@@ -20,6 +20,9 @@
                     <a href="{{ path('cabinet') }}" class="wrap-list__link">{% trans %}profile{% endtrans %}</a>
                 </li>
                 <li class="wrap-list__item">
+                    <a href="{{ path('notify') }}" class="wrap-list__link">{% trans %}notifications{% endtrans %}</a>
+                </li>
+                <li class="wrap-list__item">
                     <a href="{{ path('cabinet_tickets') }}" class="wrap-list__link">Обращения в тех поддержку</a>
                 </li>
                 <li class="wrap-list__item">
