--- a/src/AppBundle/Resources/views/Cabinet/index.html.twig
+++ b/src/AppBundle/Resources/views/Cabinet/index.html.twig
@@ -132,6 +132,19 @@
             </div>
             <div class="box-field-group">
                 <div class="box-field col-5">
+                    <label class="box-field__label">{% trans %}profile_notifications{% endtrans %}</label>
+                    <div class="box-field__input">
+                        <input type="checkbox" id="notifySale" name="notifySale" value="1" class="styler" {% if app.user.notifySale %}checked{% endif %}>
+                        <label for="notifySale" class="nowrap box-field__label">{% trans %}profile_notify_sale{% endtrans %}</label>
+                    </div>
+                    <div class="box-field__input">
+                        <input type="checkbox" id="notifyNews" name="notifyNews" value="1" class="styler" {% if app.user.notifyNews %}checked{% endif %}>
+                        <label for="notifyNews" class="nowrap box-field__label">{% trans %}profile_notify_news{% endtrans %}</label>
+                    </div>
+                </div>
+            </div>
+            <div class="box-field-group">
+                <div class="box-field col-5">
                     <label class="box-field__label">{% trans %}profile_about_myself{% endtrans %}</label>
                     <div class="box-field__input">
                         <textarea name="text" class="form-control">{{ app.user.text }}</textarea>
