--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -277,20 +277,18 @@ button::-moz-focus-inner {
   top: -1px;
   z-index: 1;
   vertical-align: top;
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
   float: left;
   margin: 0 4px 0 0;
   border: 1px solid #ccc;
-  border-radius: 4px;
-  cursor: pointer; }
-  .jq-checkbox.checked .jq-checkbox__div {
-    width: 10px;
-    height: 10px;
-    margin: 1px 0 0 1px;
-    border-radius: 3px;
-    background: #666;
-    box-shadow: inset 0 -3px 6px #AAA; }
+  box-sizing: border-box;
+  border-radius: 0px;
+  cursor: pointer;
+  /*&.checked .jq-checkbox__div */ }
+  .jq-checkbox.checked {
+    border-color: #bda180;
+    background: url(../img/icon-checkbox.png) no-repeat center center; }
   .jq-checkbox.disabled {
     opacity: .55; }
 
