--- a/src/AppBundle/Resources/views/Catalog/productEdit.html.twig
+++ b/src/AppBundle/Resources/views/Catalog/productEdit.html.twig
@@ -106,6 +106,16 @@
                         </div>
                     </div>
                     <div class="box-field col-5">
+                        <label class="box-field__label">{% trans %}model_style{% endtrans %}</label>
+                        <div class="box-field__input">
+                            <select name="style[]" multiple class="select2 form-control">
+                                {% for e in style %}
+                                    <option value="{{ e.id }}" {% if e in product.style %}selected{% endif %}>{{ e.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="box-field col-5">
                         <label class="box-field__label">{% trans %}model_description{% endtrans %}</label>
                         <div class="box-field__input">
                             <textarea name="text" class="form-control">{{ product.text }}</textarea>
